<resources>
    <string name="app_name">CleanTodo</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="color">Color</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="delete_note">Delete note</string>
    <string name="add_note">Add note</string>
    <string name="your_notes">Your notes</string>
    <string name="sort">Sort</string>
    <string name="enter_title">Enter title…</string>
    <string name="enter_some_content">Enter some content</string>
    <string name="could_not_save_note">Couldn\'t save note</string>
    <string name="save_note">Save note</string>
    <string name="note_deleted">Note deleted</string>
    <string name="undo">Undo</string>
</resources>