package com.gsrocks.cleantodo.core.utils

object TestTags {
    const val ORDER_SECTION = "order_section"
    const val ORDER_BY_TITLE_BTN = "order_by_title_btn"
    const val ORDER_BY_DATE_BTN = "order_by_date_btn"
    const val ORDER_BY_COLOR_BTN = "order_by_color_btn"
    const val NOTE_ITEM = "NOTE_ITEM"

    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val CONTENT_TEXT_FIELD = "CONTENT_TEXT_FIELD"
}